Fixed michigan and some alignment issues

--- a/Project/css/main.css
+++ b/Project/css/main.css
@@ -161,6 +161,7 @@ html, body {
     border-radius: 10px;
     text-align: left;
 	padding-left: 16px;
+	padding-right: 16px;
     font: 20px serif;
 }
 
